syntax = "proto3";

package user.v1;

option go_package = "github.com/pivaldi/go-cleanstack/internal/app/user/infra/api/gen/user/v1;userv1";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUserByEmailResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message User {
  int64 id = 1;
  string email = 2;
  optional string first_name = 3;
  optional string last_name = 4;
  string role = 5;
  string created_at = 6;
  optional string updated_at = 7;
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
  optional string first_name = 3;
  optional string last_name = 4;
  string role = 5;
}

message CreateUserResponse {
  User user = 1;
}

message GetUserRequest {
  int64 id = 1;
}

message GetUserByEmailRequest {
  string email = 1;
}

message GetUserResponse {
  User user = 1;
}

message GetUserByEmailResponse {
  User user = 1;
}

message ListUsersRequest {
  int32 offset = 1;
  int32 limit = 2;
}

message ListUsersResponse {
  repeated User users = 1;
  int64 total = 2;
}

message UpdateUserRequest {
  int64 id = 1;
  optional string email = 2;
  optional string password = 3;
  optional string first_name = 4;
  optional string last_name = 5;
  optional string role = 6;
}

message UpdateUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  int64 id = 1;
}

message DeleteUserResponse {}
